# stepwise

./: .pre-commit-config.yaml  .secrets.baseline  .secrets.baseline.update.sh  CHANGELOG.md  LICENSE  README.md  pyproject.toml
stepwise_code/: __main__.py  clean_test_string.py  file_extension_to_single_line_comment.py  file_types.py  format_file.py  format_squeezed_code_blocks.py  format_steps.py  list_files.py  wise_comments_formatter.py  wrap_non_formatted_lines.py
stepwise_code/format_code/: format_code.py  format_steps.py  prefix_non_formatted_lines.py  repeat_symbol_split.py  wrap_non_formatted_lines.py
test/: sample.py.template  test.sh
