# - Project

[project]
name = "stepwise-code"
description = "The uncompromising code formatter."
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
  { name = "Mark Lidenberg", email = "marklidenberg@gmail.com" },
]
keywords = [
  "automation",
  "formatter",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
]
dynamic = ["readme", "version"]

[project.urls]
Changelog = "https://github.com/marklidenberg/stepwise-code/blob/main/CHANGELOG.md"
Homepage = "https://github.com/marklidenberg/stepwise-code"

# - Poetry

[tool.poetry]
name = "stepwise-code"
version = "0.1.0"
description = ""
authors = ["marklidenberg <marklidenberg@gmail.com>"]

[tool.poetry.dependencies]

python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# - Formatters

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
include_trailing_comma = "True"
lines_after_imports = 2
lines_between_types = 1
combine_as_imports = "True"
known_first_party = ["stepwise_code"]
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"